--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HiltGradleImplementation"
+        android:theme="@style/Theme.CounterAppDependency"
+        android:name=".CounterApp"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
